--- a/popup.html
+++ b/popup.html
@@ -38,7 +38,7 @@ function myFunction() {
     document.getElementById("demo").style.color = "red";
 }
 </script>
-    Hello Fags!
+    Hello World!
     <div id="status"></div>
     <button type="button">Click Me!</button>
     <img src="icon.png">
